Add category field

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,5 @@
     <string name="date_not_select">Fecha no seleccionada</string>
     <string name="save">Guardar</string>
     <string name="nodata">No hay tareas pendientes, pulse el boton para añadirlas</string>
-    <string name="modify_date">Modificar</string>
-
+    <string name="modify_date">Fecha/hora</string>
 </resources>
